[package]
name = "axiomhive-dual-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand_chacha = "0.3"
rand_core = "0.6"
thiserror = "1"
# Placeholder for post-quantum signature crate
# dilithium = "" 

[dev-dependencies]
proptest = "1"
